# django-chat

./: .env  .envrc  .envrc.local.example  .gitignore  1-secret-key-generate  2-server-config-choose  Dockerfile  Pipfile  README  README.md  db.sqlite3  docker-compose.dev-nginx.yml  docker-compose.dev-traefik.yml  docker-compose.dev.nginx-standalone.yml  docker-compose.dev.nginx.yml  docker-compose.dev.traefik-standalone.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.traefik.yml  docker-compose.yml  gunicorn-start  podman-start  podman-systemd-service-file-generate  pyproject.toml  requirements.txt  runserver  server_config.py  server_config.py.default  systemd-service-file-generate  tests  traefik.dev.yml
api/: permissions.py  serializers.py  urls.py  views.py
app/: 1--secret-key-create-if-not-exists  gunicorn-start  init.sh  pyproject.toml  requirements.txt  runserver  server_config.dev.py  server_config.prod.py  server_config.test.py
app/api/: urls.py
app/chat/: views.py
app/django_chat/: settings.py
app/templates/: base.html  base_form.html
app/users/: forms.py
chat/: forms.py  models.py  signals.py  urls.py  views.py
chat/migrations/: 0001_squashed_0007_remove_conversation_token.py  0002_auto_20210102_0532.py  (+2 more)
django_chat/: settings.py  urls.py  views.py
docker/: entrypoint.sh  start.sh
jasmine/: urls.py  views.py
src/: db.sqlite3
templates/: base.html  base_form.html  boilerplate_vue.html  scripts.html
tests/: arith.test.js
users/: forms.py  models.py  urls.py  views.py
(+48 files in other folders)
